--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,7 +28,7 @@
                     <div class="post-summary">
                         @for(post <- posts) {
                             <h2>@post.title <small>- @post.publishedAt.get.format("dd MMM yyyy")</small></h2>
-                            <p>@summarize(post.content, 460)</p>
+                            <p>@Html(summarize(post.content, 460))</p>
                             <a href="/p/@(post.slugTitle).html" class="btn-custom btn-post">Continue Reading</a>
                         }
                     </div>
