Update play framework Fix for login Fix redirect after saving post

--- a/app/views/resume.scala.html
+++ b/app/views/resume.scala.html
@@ -121,6 +121,11 @@
                     <h2>Experience</h2>
                 </div>
                 <div class="col-md-8">
+                    <h3>Software Developer - TecSinapse <small>| 2015 - present</small></h3>
+                    <p>
+                        Home Office, Java 8, Spring, Hibernate, JSF, Postgresql, AWS
+                    </p>
+
                     <h3>Senior Software Engineer - UOL (Universo Online) <small>| 2008 - 2015</small></h3>
                     <p>
 UOL is the biggest brazilian internet portal. In Brazil, only Google, Facebook and Youtube has more visits according to Alexa.
